# IA-Hardware-Composer

./: Android.common.mk
GUnit-hwc/: CMakeLists.txt  Readme.md
GUnit-hwc/include/: GUnit.h
GUnit-hwc/test/: CMakeLists.txt  runMinTests.sh
GUnit-hwc/test/Detail/: ProgUtils.cpp
GUnit-hwc/test/libs/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake  example_GTest-Lite  test_GTest-Lite
GUnit-hwc/test/libs/googletest/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
GUnit-hwc/test/libs/googletest/googletest-build/: CTestTestfile.cmake  cmake_install.cmake
GUnit-hwc/test/libs/googletest/googletest-build/googlemock/: CTestTestfile.cmake  cmake_install.cmake
GUnit-hwc/test/libs/googletest/googletest-build/googlemock/gtest/: CTestTestfile.cmake  cmake_install.cmake
GUnit-hwc/test/libs/googletest/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
GUnit-hwc/test/libs/libs/googletest/: CTestTestfile.cmake  cmake_install.cmake
GUnit-hwc/test/libs/libs/googletest/googletest-prefix/tmp/: googletest-gitclone.cmake
common/: Android.mk
common/compositor/va/: varenderer.cpp  varenderer.h
os/android/: gralloc1bufferhandler.cpp  gralloc1bufferhandler.h
public/: hwcbuffer.h
wsi/: Android.mk  overlaybuffer.h
wsi/drm/: drmbuffer.cpp  drmbuffer.h
